lkkjhhggg.txt
[INFO] Scanning for projects...
[INFO]                                                                         
[INFO] ------------------------------------------------------------------------
[INFO] Building jobvacancy 0.0.4-SNAPSHOT
[INFO] ------------------------------------------------------------------------
[INFO] 
[INFO] >>> spring-boot-maven-plugin:1.2.6.RELEASE:run (default-cli) @ jobvacancy >>>
[INFO] 
[INFO] --- maven-enforcer-plugin:1.3.1:enforce (enforce-versions) @ jobvacancy ---
[INFO] 
[INFO] --- jacoco-maven-plugin:0.7.4.201502262128:prepare-agent (pre-unit-tests) @ jobvacancy ---
[INFO] surefireArgLine set to -javaagent:/home/lago/.m2/repository/org/jacoco/org.jacoco.agent/0.7.4.201502262128/org.jacoco.agent-0.7.4.201502262128-runtime.jar=destfile=/home/lago/prueba/nuevo/target/test-results/coverage/jacoco/jacoco.exec
[INFO] 
[INFO] --- maven-processor-plugin:2.2.4:process (process) @ jobvacancy ---
[ERROR] diagnostic: /home/lago/prueba/nuevo/src/main/java/com/jobvacancy/domain/JobOffer.java:7: error: package com.jobvacancy.web.rest.error does not exist
import com.jobvacancy.web.rest.error.DateException;
                                    ^
[ERROR] diagnostic: /home/lago/prueba/nuevo/src/main/java/com/jobvacancy/domain/JobOffer.java:108: error: cannot find symbol
    public void setStartDate(Date startDate) throws DateException {
                                                    ^
  symbol:   class DateException
  location: class com.jobvacancy.domain.JobOffer
[ERROR] diagnostic: /home/lago/prueba/nuevo/src/main/java/com/jobvacancy/domain/JobOffer.java:122: error: cannot find symbol
    public void setEndDate(Date endDate) throws DateException {
                                                ^
  symbol:   class DateException
  location: class com.jobvacancy.domain.JobOffer
[WARNING] diagnostic: warning: The following options were not recognized by any processor: '[mapstruct.defaultComponentModel, mapstruct.suppressGeneratorTimestamp]'
[ERROR] error on execute: error during compilation
[INFO] ------------------------------------------------------------------------
[INFO] BUILD FAILURE
[INFO] ------------------------------------------------------------------------
[INFO] Total time: 5.804s
[INFO] Finished at: Mon Nov 13 20:05:04 ART 2017
[INFO] Final Memory: 34M/331M
[INFO] ------------------------------------------------------------------------
[ERROR] Failed to execute goal org.bsc.maven:maven-processor-plugin:2.2.4:process (process) on project jobvacancy: Error executing: error during compilation -> [Help 1]
[ERROR] 
[ERROR] To see the full stack trace of the errors, re-run Maven with the -e switch.
[ERROR] Re-run Maven using the -X switch to enable full debug logging.
[ERROR] 
[ERROR] For more information about the errors and possible solutions, please read the following articles:
[ERROR] [Help 1] http://cwiki.apache.org/confluence/display/MAVEN/MojoExecutionException
